--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,15 +50,15 @@ p {
     font-size: 16px;
 }
 
-.hero {
-    height: 800px;
-    width: 100%;
+.background-image {
+    height: 800px; /* Fixed height */
+    width: 100%; /* Full width of the container */
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
+    background-image: url('../images/digital-marketing-meeting.jpg'); /* Corrected path */
+    background-size: cover; /* This will cover the entire area of the element */
+    background-repeat: no-repeat;
+    background-position: center center; /* Centers the background image */
 }
-
 .float-left {
     float: left;
     margin-right: 25px;
@@ -159,6 +159,10 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+}
+
+.digital-marketing-meeting img {
+    max-height: 200px;
 }
 
 .search-engine-optimization img {
